--- a/tpl/view_log.html
+++ b/tpl/view_log.html
@@ -2,69 +2,94 @@
 <load target="css/view_log.css" />
 <load target="js/view_log.js" />
 
-<table id="advanced_mailer_log" class="x_table x_table-striped x_table-hover">
-	<caption>
-		<strong>Total: {number_format($total_count)}, Page: {number_format($page)}/{number_format($total_page)}</strong>
-	</caption>
-	<thead>
-		<tr>
-			<th scope="col" class="nowr">{$lang->cmd_advanced_mailer_status_sender}</th>
-			<th scope="col" class="nowr">{$lang->cmd_advanced_mailer_status_recipient}</th>
-			<th scope="col" class="nowr">{$lang->cmd_advanced_mailer_status_subject}</th>
-			<th scope="col" class="nowr">{$lang->cmd_advanced_mailer_status_sending_method}</th>
-			<th scope="col" class="nowr">{$lang->cmd_advanced_mailer_status_time}</th>
-			<th scope="col" class="nowr">{$lang->cmd_advanced_mailer_status}</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr loop="$advanced_mailer_log => $mail_id, $val">
-			<td class="nowr">
-				<!--@foreach($val->mail_from as $no => $mail_from)-->
-				<span title="{htmlspecialchars($mail_from[1])}">{htmlspecialchars($mail_from[0])}</span><br />
-				<!--@end-->
-			</td>
-			<td class="nowr">
-				<!--@foreach($val->mail_to as $no => $mail_to)-->
-				<span class="hidden"|cond="$no > 0" title="{htmlspecialchars($mail_to[1])}">{htmlspecialchars($mail_to[0])}</span>
-				<span class="show-hidden-recipients" cond="$no == 0 && count($val->mail_to) > 1">+{count($val->mail_to) - 1}</span>
-				<br />
-				<!--@end-->
-			</td>
-			<td class="nowr">{htmlspecialchars($val->subject)}</td>
-			<td class="nowr">
-				{Context::getLang('cmd_advanced_mailer_sending_method_' . $val->sending_method)}
-			</td>
-			<td class="nowr">{(zdate($val->regdate, "Y-m-d\nH:i:s"))}</td>
-			<td class="nowr">
-				<!--@if($val->status === 'success')-->
-					{$lang->cmd_advanced_mailer_status_success}
-				<!--@else-->
-					<a href="javascript:void(0)" class="show-errors">{$lang->cmd_advanced_mailer_status_error}</a>
-					<div class="mail-log-errors">
-						<strong>{$lang->cmd_advanced_mailer_status_error_msg}:</strong><br />
-						{nl2br(htmlspecialchars(trim($val->errors)))}<br /><br />
-						<strong>{$lang->cmd_advanced_mailer_status_calling_script}:</strong><br />
-						{htmlspecialchars($val->calling_script)}
-					</div>
-				<!--@end-->
-			</td>
-		</tr>
-		<tr cond="!$advanced_mailer_log">
-			<td>{$lang->msg_advanced_mailer_log_is_empty}</td>
-		</tr>
-	</tbody>
-</table>
+<div class="table even">
+	<table id="advanced_mailer_log" class="x_table x_table-striped x_table-hover">
+		<caption>
+			<strong>Total: {number_format($total_count)}, Page: {number_format($page)}/{number_format($total_page)}</strong>
+		</caption>
+		<thead>
+			<tr>
+				<th scope="col" class="nowr">{$lang->cmd_advanced_mailer_status_sender}</th>
+				<th scope="col" class="nowr">{$lang->cmd_advanced_mailer_status_recipient}</th>
+				<th scope="col" class="nowr">{$lang->cmd_advanced_mailer_status_subject}</th>
+				<th scope="col" class="nowr">{$lang->cmd_advanced_mailer_status_sending_method}</th>
+				<th scope="col" class="nowr">{$lang->cmd_advanced_mailer_status_time}</th>
+				<th scope="col" class="nowr">{$lang->cmd_advanced_mailer_status}</th>
+			</tr>
+		</thead>
+		<tfoot>
+			<tr>
+				<th scope="col" class="nowr">{$lang->cmd_advanced_mailer_status_sender}</th>
+				<th scope="col" class="nowr">{$lang->cmd_advanced_mailer_status_recipient}</th>
+				<th scope="col" class="nowr">{$lang->cmd_advanced_mailer_status_subject}</th>
+				<th scope="col" class="nowr">{$lang->cmd_advanced_mailer_status_sending_method}</th>
+				<th scope="col" class="nowr">{$lang->cmd_advanced_mailer_status_time}</th>
+				<th scope="col" class="nowr">{$lang->cmd_advanced_mailer_status}</th>
+			</tr>
+		</tfoot>
+		<tbody>
+			<tr loop="$advanced_mailer_log => $mail_id, $val">
+				<td class="nowr">
+					<!--@foreach($val->mail_from as $no => $mail_from)-->
+					<span title="{htmlspecialchars($mail_from[1])}">{htmlspecialchars($mail_from[0])}</span><br />
+					<!--@end-->
+				</td>
+				<td class="nowr">
+					<!--@foreach($val->mail_to as $no => $mail_to)-->
+					<span class="hidden"|cond="$no > 0" title="{htmlspecialchars($mail_to[1])}">{htmlspecialchars($mail_to[0])}</span>
+					<span class="show-hidden-recipients" cond="$no == 0 && count($val->mail_to) > 1">+{count($val->mail_to) - 1}</span>
+					<br />
+					<!--@end-->
+				</td>
+				<td class="nowr">{htmlspecialchars($val->subject)}</td>
+				<td class="nowr">
+					{Context::getLang('cmd_advanced_mailer_sending_method_' . $val->sending_method)}
+				</td>
+				<td class="nowr">{(zdate($val->regdate, "Y-m-d\nH:i:s"))}</td>
+				<td class="nowr">
+					<!--@if($val->status === 'success')-->
+						{$lang->cmd_advanced_mailer_status_success}
+					<!--@else-->
+						<a href="javascript:void(0)" class="show-errors">{$lang->cmd_advanced_mailer_status_error}</a>
+						<div class="mail-log-errors">
+							<strong>{$lang->cmd_advanced_mailer_status_error_msg}:</strong><br />
+							{nl2br(htmlspecialchars(trim($val->errors)))}<br /><br />
+							<strong>{$lang->cmd_advanced_mailer_status_calling_script}:</strong><br />
+							{htmlspecialchars($val->calling_script)}
+						</div>
+					<!--@end-->
+				</td>
+			</tr>
+			<tr cond="!$advanced_mailer_log">
+				<td>{$lang->msg_advanced_mailer_log_is_empty}</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
 
-<div class="x_clearfix">
-	<form class="x_pagination x_pull-left" style="margin-top:8px" action="{Context::getUrl('')}" method="post" no-error-return-url="true">
-		<input loop="$param => $key, $val" cond="!in_array($key, array('mid', 'vid', 'act'))" type="hidden" name="{$key}" value="{$val}" />
-		<ul>
-			<li class="x_disabled"|cond="$page == 1"><a href="{getUrl('page', '')}">&laquo; {$lang->first_page}</a></li>
-			<!--@while($page_no = $page_navigation->getNextPage())-->
-				<li class="x_active"|cond="$page_no == $page"><a href="{getUrl('page', $page_no)}">{$page_no}</a></li>
-			<!--@end-->
-			<li class="x_disabled"|cond="$page == $page_navigation->last_page"><a href="{getUrl('page', $page_navigation->last_page)}">{$lang->last_page} &raquo;</a></li>
-		</ul>
+<div class="search">
+	<form class="pagination" style="margin-top:8px" action="{Context::getUrl('')}" method="post" no-error-return-url="true">
+		<a href="{getUrl('page', '')}" class="direction">&laquo; {$lang->first_page}</a>
+		<block cond="$page_navigation->first_page + $page_navigation->page_count > $page_navigation->last_page && $page_navigation->page_count != $page_navigation->total_page">
+			{@$isGoTo = true}
+			<a href="{getUrl('page', '')}">1</a>
+			<a href="#goTo" class="tgAnchor" title="{$lang->cmd_go_to_page}">...</a>
+		</block>
+		<!--@while($page_no = $page_navigation->getNextPage())-->
+			{@$last_page = $page_no}
+			<strong cond="$page_no == $page">{$page_no}</strong>
+			<a cond="$page_no != $page" href="{getUrl('page', $page_no)}">{$page_no}</a>
+		<!--@end-->
+		<block cond="$last_page != $page_navigation->last_page">
+			{@$isGoTo = true}
+			<a href="#goTo" class="tgAnchor" title="{$lang->cmd_go_to_page}">...</a>
+			<a href="{getUrl('page', $page_navigation->last_page)}">{$page_navigation->last_page}</a>
+		</block>
+		<a href="{getUrl('page', $page_navigation->last_page)}" class="direction">{$lang->last_page} &raquo;</a>
+		<span cond="$isGoTo" id="goTo" class="tgContent">
+			<input name="page" title="{$lang->cmd_go_to_page}" />
+			<button type="submit">Go</button>
+		</span>
 	</form>
 	<form class="x_pull-right x_input-append" style="margin-top:8px" action="{Context::getUrl('')}" method="post">
 		<input type="hidden" name="module" value="advanced_mailer" />
